--- a/pages/B01SZ.html
+++ b/pages/B01SZ.html
@@ -329,9 +329,9 @@
                   <h5 class="text-white">Info</h5>
                   <ul class="list-unstyled">
                       <li><a href="#">Nosotros</a></li>
-                      <li><a href="#">Tutorias</a></li>
-                      <li><a href="#">Beneficios</a></li>
-                      <li><a href="#">Precios</a></li>
+                      <li><a href="#">Calendar</a></li>
+                      <li><a href="#">Grades</a></li>
+                      <li><a href="#">Recursos</a></li>
                   </ul>
               </div>
               <div class="col-lg-2">
@@ -359,7 +359,7 @@
                   <p class="mb-0">© 2023 | Diseñado con amor y dedicación<i
                       class="bx bx-heart text-danger"></i> por<a
                           href="https://www.youtube.com/channel/UCmoCEECyW8IRFEmsu3-Z30g"
-                          class="text-white"> Carlos Apolaya Sanchez </a></p>
+                          class="text-white"> Carlos Apolaya Sanchez  para IDIOMAS CAYETANO </a></p>
               </div>
               <div class="col-md-6">
                   <div class="social-icons">
